P2/Arrays/01/var/archive/xmlreports/0/0/3/000126
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="126" judge-id="1" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>b6004beb-4aef-4d6d-826d-e04038b4b5ae</uuid>
  <compiler_output>000126.cpp:1:1: error: expected unqualified-id
/rightcode\
^
1 error generated.
</compiler_output>
</testing-report>
